--- a/main.css
+++ b/main.css
@@ -86,7 +86,8 @@ ul {
 .header-center {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 50px;
 }
 
 .left-page {
